--- a/BulletTime-iOS/Podfile
+++ b/BulletTime-iOS/Podfile
@@ -13,6 +13,8 @@ pod 'LTUIKit'
 pod 'LTSwiftDate'
 pod 'AsyncSwift'
 pod 'Alamofire'
+pod 'Fabric'
+pod 'Crashlytics'
 end
 
 post_install do |installer|
