--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "connect-multiparty": "^2.0.0",
     "express": "^4.13.4",
-    "pug": "^2.0.0-beta5",
+    "jade": "^1.11.0",
     "qiniu": "^6.1.11",
     "serve-static": "^1.10.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-stylus": "^2.4.0",
+    "lodash": "^4.13.1",
+    "nib": "^1.1.0"
   }
 }
