--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,11 +7,10 @@ target 'BulletTime' do
 pod 'SVProgressHUD'
 pod 'SwiftyJSON'
 pod 'R.swift'
-pod 'RealmSwift', '1.0.2'
+pod 'RealmSwift', '1.1.0'
 pod 'LTUIKit'
 pod 'LTSwiftDate'
 pod 'AsyncSwift'
-pod 'Alamofire'
 pod 'Fabric'
 pod 'Crashlytics'
 end
@@ -19,6 +18,7 @@ end
 post_install do |installer|
     installer.pods_project.targets.each do |target|
         target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '2.3'
             config.build_settings['EXPANDED_CODE_SIGN_IDENTITY'] = ""
             config.build_settings['CODE_SIGNING_REQUIRED'] = "NO"
             config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
