--- a/ios/BulletTime/Info.plist
+++ b/ios/BulletTime/Info.plist
@@ -62,6 +62,8 @@
 	<string>to connect to other devices</string>
 	<key>NSCameraUsageDescription</key>
 	<string>to take photo</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>to save video to your album</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>to save video to your album</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
