--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,7 @@ pod 'AsyncSwift'
 pod 'Fabric'
 pod 'Crashlytics'
 pod 'TextAttributes'
+pod 'BluetoothKit', :git => 'git@github.com:rhummelmose/BluetoothKit.git'
 end
 
 post_install do |installer|
